--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,9 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1",
     "gh-pages": "^3.1.0"
   }
 }
